TODO :
	FIX OO dispatch order for JIT (done for interp in 1.5.4)
	Reduce DebugInfos memory size at least by 1/4
	OSX/Intel JIT
	MAX_STACK_PER_FUNCTION prevent >128 static array declarations

2007-??-?? : 1.6.1
	nekoc : allow binary ast format with -p, don't allow inline nxml

2007-07-25 : 1.6.0
	display error message when uncaught exception in neko thread
	fix bug in long run JIT programs : no C functions callable anymore
	use a smarter way to prevent C stack overflow
	nekoc : stack align error message
	set max-stack-per-function to 128 and default-stack-size to 256
	jit now check stack overflow on function entry and not on every push
	mod_neko2 set MOD_NEKO=2 env var (for version detection)
	mod_neko2 : remove Apache 2.0 error message, use 302 http code for redirect
	fixed fallback of interp operator overloading
	fix for 64-bit CPU
	minor optimization for [0] jit array access
	gnuk/freebsd support
	fixed thread messages on Windows (do not use system queue)
	thread_current returns unique value
	remove kind_import, kind_export, added kind_share
	added ui library
	added libs/std/process api functions
	new binary ast format (faster than nxml)

2007-01-28 : 1.5.3
	minor fixes in mod_neko multipart and POST data handling
	fixed $objremove result (was always true)
	fixed one-last-bug when using more-than-five-arguments method call return value
	fixed bug in dev webserver when accessing a directory
	added xcross support
	fixed bug with $setresolver in bytecode interpreter
	changed bootable vm implementation (easier, allow compressed bin)
	added .mode in sys_stat
	change in $version format

2006-11-22 : 1.5.2
	fixed std math_pow float
	minor thread cleanup
	added MySQL5.ndll for Windows
	fields hash cache is now global (instead of per-thread)
	socket_select retry on EINTR
	fixed under-second lock timeout for Linux/OSX
	added socket_poll for Linux/OSX (emulate with select() on Windows)
	fixed compilation bug when accessing 'this' in arguments and more than 5 args